# daidai

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  style.yml  tests.yml
assets/javascripts/: bundle.c8b220af.min.js  bundle.f1b6f286.min.js
cli/: index.html
concepts/: index.html
cookbooks/: index.html
daidai/: __init__.py  cli.py  config.py  core.py  decorators.py  files.py  managers.py  types.py
docs/: index.md
integrations/: index.html
integrations/azure/: index.html
integrations/fastapi/: index.html
integrations/flask/: index.html
integrations/gcs/: index.html
integrations/hf/: index.html
integrations/jupyter/: index.html
integrations/mlflow/: index.html
integrations/s3/: index.html
search/: search_index.json
tests/: test_main.py
tests/unit/: test_artifacts.py
tutorials/: index.html
